--- a/setup.cfg
+++ b/setup.cfg
@@ -1,45 +1,5 @@
-[metadata]
-name = stsci.image
-version = 2.2.0.dev
-author = Todd Miller
-author-email = help@stsci.edu
-summary = Image array manipulation functions
-description = Formerly included in SciPy as scipy.stsci.image
-home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
-classifier =
-	Intended Audience :: Science/Research
-	License :: OSI Approved :: BSD License
-	Operating System :: OS Independent
-	Programming Language :: Python
-	Topic :: Scientific/Engineering :: Astronomy
-	Topic :: Software Development :: Libraries :: Python Modules
-requires-python = >=2.5
-requires-dist =
-	stsci.tools
-	numpy (>=1.5.1)
-        scipy (>=0.14)
-
-[files]
-packages =
-	stsci
-	stsci.image
-	stsci.image.test
-package_data =
-	stsci.image.test = data/*.fits
-
-[extension=stsci.image._combine]
-sources = src/_combinemodule.c
-define_macros =
-	NUMPY = 1
-include_dirs = numpy
-extra_compile_args = -Wno-unused-function
-
-[build_ext]
-pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook
-
-[global]
-setup_hooks =
-	stsci.distutils.hooks.use_packages_root
-	stsci.distutils.hooks.tag_svn_revision
-	stsci.distutils.hooks.version_setup_hook
-
+[bdist_wheel]
+# This flag says that the code is written to work on both Python 2 and Python
+# 3. If at all possible, it is good practice to do this. If you cannot, you
+# will need to generate wheels for each Python version that you support.
+universal=1
