--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,8 @@ classifier =
     Topic :: Software Development :: Libraries :: Python Modules
 requires-python = >=2.5
 requires-dist =
-    numpy (>=1.5.1)
-    scipy (>=0.14)
+    numpy
+    scipy
 
 [files]
 packages =
