--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,2 @@
 [build-system]
-requires = ["setuptools>=38.2.5", "wheel", "numpy"]
+requires = ["setuptools>=38.2.5", "wheel", "numpy", "setuptools_scm"]
