--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,16 @@ on:
 
 jobs:
   ci:
-    name: ${{ matrix.python-version }}
+    name: Python ${{ matrix.python-version }}, numpy${{ matrix.numpy-version }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        include:
+          - python-version: 3.7
+            numpy-version: "~=1.14.0"
+        python-version: [3.7, 3.8, 3.9]
+        numpy-version: ["~=1.17.0", "~=1.19.0", ""]
 
     steps:
       - name: Checkout code
@@ -35,7 +39,7 @@ jobs:
       - name: Install stsci.image
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[test]
+          pip install -e .[test] numpy${{ matrix.numpy-version }}
 
       - name: Run tests
         run: |
