--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - python-version: 3.6
+            numpy-version: "~=1.14.0"
           - python-version: 3.7
             numpy-version: "~=1.14.0"
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9]
         numpy-version: ["~=1.17.0", "~=1.19.0", ""]
 
     steps:
