--- a/.github/workflows/test_devdeps.yml
+++ b/.github/workflows/test_devdeps.yml
@@ -36,10 +36,7 @@ jobs:
       - name: Install stsci.image
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[test]
-
-      - run: pip install "numpy>=2.0.0.dev0" --extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
-
+          pip install -e .[test] "numpy>=2.0.0.dev0" --extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
       - name: Run tests
         run: |
           pytest
