--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
         include:
           - python-version: "3.12"
             numpy-version: "~=1.26.0"
-        python-version: ["3.9", "3.10", "3.11"]
-        numpy-version: ["~=1.23.0", "~=1.26.0", ""]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"
+        numpy-version: ["~=1.23.0", "~=1.26.0", ">=2.0"]
 
     steps:
       - name: Checkout code
@@ -38,9 +38,14 @@ jobs:
 
       - name: Install stsci.image
         run: |
-          python -m pip install --upgrade pip
-          pip install -e .[test] numpy${{ matrix.numpy-version }}
+          set -x
+          python -m pip install --upgrade pip setuptools
+          python -m pip install -e .[test] numpy${{ matrix.numpy-version }}
+
+      - name: Show packages
+        run: |
+          python -m pip list
 
       - name: Run tests
         run: |
-          pytest
+          python -m pytest
