--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         include:
           - python-version: "3.12"
             numpy-version: "~=1.26.0"
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         numpy-version: ["~=1.23.0", "~=1.26.0", ">=2.0"]
 
     steps:
