Exclude numpy 1.23 from python >=3.12

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
+        exclude:
           - python-version: "3.12"
-            numpy-version: "~=1.26.0"
+            numpy-version: "~=1.23.0"
+          - python-version: "3.13"
+            numpy-version: "~=1.23.0"
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         numpy-version: ["~=1.23.0", "~=1.26.0", ">=2.0"]
 
