Exclude numpy 1.26 from python 3.13

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
             numpy-version: "~=1.23.0"
           - python-version: "3.13"
             numpy-version: "~=1.23.0"
+          - python-version: "3.13"
+            numpy-version: "~=1.26.0"
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         numpy-version: ["~=1.23.0", "~=1.26.0", ">=2.0"]
 
