--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "numpy",
     "scipy",
 ]
-license-files = ["LICENSE"]
+license-files = ["LICENSE.txt"]
 dynamic = [
     "version",
 ]
@@ -43,7 +43,7 @@ requires = [
     "setuptools >=61.2",
     "setuptools_scm[toml] >=6.2",
     "wheel",
-    "numpy>=2.0.0rc2",
+    "numpy>=2.0",
 ]
 build-backend = "setuptools.build_meta"
 
@@ -52,7 +52,7 @@ zip-safe = false
 
 [tool.setuptools.packages.find]
 include = [
-    "stsci",
+    "stsci/image",
 ]
 
 [tool.setuptools.package-data]
@@ -61,3 +61,4 @@ include = [
 ]
 
 [tool.setuptools_scm]
+version_file = "stsci/image/version.py"
