Configure namespace package per setuptools documentation (#39)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ repository = "https://github.com/spacetelescope/stsci.image"
 [build-system]
 requires = [
     "setuptools >=61.2",
-    "setuptools_scm[toml] >=6.2",
+    "setuptools_scm[toml] >=8",
     "wheel",
     "numpy>=2.0",
 ]
@@ -51,9 +51,7 @@ build-backend = "setuptools.build_meta"
 zip-safe = false
 
 [tool.setuptools.packages.find]
-include = [
-    "stsci/image",
-]
+include = ["stsci.image"]
 
 [tool.setuptools.package-data]
 "*" = [
