--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ description = "Image array manipulation functions"
 readme = "README.md"
 requires-python = ">=3.9"
 authors = [
-    { name = "STScI", email = "help@stsci.edu" },
+    { name = "STScI" },
 ]
 classifiers = [
     "Intended Audience :: Science/Research",
