--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,7 +48,7 @@ repos:
     hooks:
       - id: codespell
         args:
-          - --write-changes
+          # - --write-changes
           - --summary
         additional_dependencies:
           - tomli
